Implement like button, sort posts in frontend
